midterm/apps/vikunja/vikunja-ingress.yaml
apiVersion: v1
items:
- apiVersion: networking.k8s.io/v1
  kind: Ingress
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"networking.k8s.io/v1","kind":"Ingress","metadata":{"annotations":{"nginx.ingress.kubernetes.io/proxy-body-size":"50m"},"name":"vikunja","namespace":"vikunja"},"spec":{"ingressClassName":"nginx","rules":[{"http":{"paths":[{"backend":{"service":{"name":"vikunja","port":{"number":80}}},"path":"/","pathType":"Prefix"}]}}]}}
      nginx.ingress.kubernetes.io/proxy-body-size: 50m
    creationTimestamp: "2026-03-04T20:46:32Z"
    generation: 1
    name: vikunja
    namespace: vikunja
    resourceVersion: "46597"
    uid: 11585c42-aba0-498f-b81a-9bd87b54ec49
  spec:
    ingressClassName: nginx
    rules:
    - http:
        paths:
        - backend:
            service:
              name: vikunja
              port:
                number: 80
          path: /
          pathType: Prefix
  status:
    loadBalancer:
      ingress:
      - ip: 10.105.175.32
kind: List
metadata:
  resourceVersion: ""
